[gd_scene load_steps=4 format=3 uid="uid://bdjvasoxvyryd"]

[ext_resource type="Script" path="res://scripts/LevelPicker.gd" id="1_8upjy"]
[ext_resource type="Theme" uid="uid://c7ohq3l00nmhq" path="res://resources/themes/hud_theme.tres" id="2_k6n2o"]
[ext_resource type="Texture2D" uid="uid://bnjs2wtc0x88w" path="res://assets/map_preview/1.png" id="3_nnm54"]

[node name="LevelPicker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8upjy")
pages_number = 2

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 5

[node name="VB" type="VBoxContainer" parent="MC"]
layout_mode = 2

[node name="Title2" type="HBoxContainer" parent="MC/VB"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="LevelType" type="Label" parent="MC/VB/Title2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("2_k6n2o")
text = "Training:"
vertical_alignment = 1

[node name="LevelName" type="Label" parent="MC/VB/Title2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_k6n2o")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HB" type="HBoxContainer" parent="MC/VB"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
theme_override_constants/separation = 25

[node name="Levels" type="VBoxContainer" parent="MC/VB/HB"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 250)
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Level1" type="Button" parent="MC/VB/HB/Levels"]
process_mode = 3
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
theme = ExtResource("2_k6n2o")
text = "Level 1"

[node name="Level2" type="Button" parent="MC/VB/HB/Levels"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
theme = ExtResource("2_k6n2o")
text = "Level 2"

[node name="Level3" type="Button" parent="MC/VB/HB/Levels"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
theme = ExtResource("2_k6n2o")
text = "Level 3"

[node name="Level4" type="Button" parent="MC/VB/HB/Levels"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
theme = ExtResource("2_k6n2o")
text = "Level 4"

[node name="Preview" type="TextureRect" parent="MC/VB/HB"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_nnm54")
expand_mode = 3
stretch_mode = 4

[node name="Controls" type="HBoxContainer" parent="MC/VB"]
layout_mode = 2
alignment = 2

[node name="NextPage" type="Button" parent="MC/VB/Controls"]
layout_mode = 2
theme = ExtResource("2_k6n2o")
text = "Next Page"

[node name="Seperator" type="Label" parent="MC/VB/Controls"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2

[node name="Exit" type="Button" parent="MC/VB/Controls"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("2_k6n2o")
text = "Quit Game"

[connection signal="mouse_entered" from="MC/VB/HB/Levels/Level1" to="." method="_on_level_mouse_entered" binds= [1]]
[connection signal="pressed" from="MC/VB/HB/Levels/Level1" to="." method="_on_level_pressed" binds= [1]]
[connection signal="mouse_entered" from="MC/VB/HB/Levels/Level2" to="." method="_on_level_mouse_entered" binds= [2]]
[connection signal="pressed" from="MC/VB/HB/Levels/Level2" to="." method="_on_level_pressed" binds= [2]]
[connection signal="mouse_entered" from="MC/VB/HB/Levels/Level3" to="." method="_on_level_mouse_entered" binds= [3]]
[connection signal="pressed" from="MC/VB/HB/Levels/Level3" to="." method="_on_level_pressed" binds= [3]]
[connection signal="mouse_entered" from="MC/VB/HB/Levels/Level4" to="." method="_on_level_mouse_entered" binds= [4]]
[connection signal="pressed" from="MC/VB/HB/Levels/Level4" to="." method="_on_level_pressed" binds= [4]]
[connection signal="pressed" from="MC/VB/Controls/NextPage" to="." method="_on_next_page_pressed"]
[connection signal="pressed" from="MC/VB/Controls/Exit" to="." method="_on_exit_pressed"]
